<resources>
    <string name="app_name">Vilo BESTE</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txtInterestsCount">0</string>
    <string name="right_arrow">></string>
    <string name="distance">10 km</string>
    <string name="facebook_app_id">1495136917391994</string>
    <string name="searchLabel">Searching for posts around you...</string>
    <string name="no_posts_found">No posts found.</string>
    <string name="send">Send</string>
    <string name="makeComment">Message</string>
    <string name="uploadText">What\'s happening around you?</string>
    <string name="uploadTitle">Title (max. 50 chars)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_first_section">Notifications</string>
    <string name="title_second_section">About</string>
    <string name="title_third_section">Account</string>
    <string name="interests_push">New Comments (in Interests)</string>
    <string name="own_push">New Comments (Own)</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsofservice">Terms of Service</string>
    <string name="imprint">Imprint</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
