<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:background="#dedede">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="NOTIFICATIONS"
        android:id="@+id/textView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textColor="#7d7d7d" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/interests_push"
        android:id="@+id/interests_push_switch"
        android:textColor="#000"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/own_push"
        android:id="@+id/own_push_switch"
        android:textColor="#000"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="ABOUT"
        android:id="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textColor="#7d7d7d" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacypolicy"
        android:id="@+id/privacypolicyBtn"
        android:background="#fff"
        android:gravity="left|center_vertical"
        android:textColor="#000"
        android:layout_gravity="left"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termsofservice"
        android:id="@+id/termsofserviceBtn"
        android:background="#fff"
        android:gravity="left|center_vertical"
        android:textColor="#000"
        android:layout_gravity="left"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imprint"
        android:id="@+id/imprintBtn"
        android:background="#fff"
        android:gravity="left|center_vertical"
        android:textColor="#000"
        android:layout_gravity="left"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="ACCOUNT"
        android:id="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textColor="#7d7d7d" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_facebook_loginview_log_out_action"
        android:id="@+id/logoutBtn"
        android:background="#fff"
        android:textColor="#000" />

</LinearLayout>